--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+	p::before{
+	content:"Before Element";
+	color:red;
+	Font-size:large;
+	}
+
+	p::after{
+	content:"After Element";
+	color:red;
+	Font-size:large;
+	}
